get input values

--- a/src/app/contact-form/contact-form.component.html
+++ b/src/app/contact-form/contact-form.component.html
@@ -1,6 +1,6 @@
 <form (submit)="sendMail()" #myForm>
-    <input type="text" id="name" name="name" placeholder="Your name">
-    <input type="text" id="name" name="message" placeholder="Your message">
+    <input type="text" name="name" placeholder="Your name" #nameField>
+    <input type="text" name="message" placeholder="Your message" #messageField>
     <button>Send message </button>
   </form>
 
